microservices-ecommerce-project/k8s/base/order-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: ecommerce
spec:
  selector:
    app: order-service
  ports:
  - port: 8003
    targetPort: 8003
    protocol: TCP
  type: ClusterIP
